--- a/_layouts/comingsoon.html
+++ b/_layouts/comingsoon.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>TrailMix.ie</title>
     <link href="http://fonts.googleapis.com/css?family=Josefin+Sans:600,700|Damion" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="{{ site.url }}/css/main.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
     <meta name="viewport" content="width=device-width, initial-scale = 1.0, user-scalable = no">
   </head>
   <body>
