--- a/assets/css/sections/_hero.scss
+++ b/assets/css/sections/_hero.scss
@@ -1,8 +1,8 @@
-.hero {  
+.hero {
   $base-border-radius: 3px !default;
   $action-color: #477DCA !default;
   $large-screen: em(860) !default;
-  $hero-background-top: #7F99BE; 
+  $hero-background-top: #7F99BE;
   $hero-background-bottom: #20392B;
   $hero-color: white;
   $gradient-angle: 10deg;
@@ -26,7 +26,7 @@
     @include clearfix;
     color: $hero-color;
     margin: auto;
-    padding: 3.5em;
+    padding-top: 10em;
     text-align: center;
     // display: flex;
     // flex-direction: column;
@@ -37,7 +37,7 @@
     .hero-copy {
       text-align: center;
 
-      
+
       h1 {
         font-size: 1.6em;
         margin-bottom: 0.5em;
@@ -50,7 +50,7 @@
       p {
         font-weight: 200;
         line-height: 1.4em;
-        margin: 0 auto 3em auto; 
+        margin: 0 auto 3em auto;
 
         @include media($large-screen) {
           font-size: 1.1em;
