added a textured ribbon to the top right and corner with link

--- a/assets/css/sections/_sections-dir.scss
+++ b/assets/css/sections/_sections-dir.scss
@@ -1,6 +1,8 @@
 // import 'the_diffrent_sections_here'
+@import 'texture';
 @import 'comingsoon';
 @import 'device_hero';
 @import 'hero';
 @import 'footer';
 @import 'flexboxes';
+@import 'ribbon';
