--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -1,11 +1,18 @@
+
 <div id='hero'>
+	<div class="ribbon-box">
+		<div class="ribbon-wrapper">
+			<div class="ribbon"><a href="https://www.surveymonkey.com/s/HMF2VCT">Quick Survey</a></div>
+		</div>
+	</div>
 	<div class="hero">
+
 		<div class="hero-inner">
 	    <a href="" class="hero-logo"><img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_logo_1.png
 	" alt="hero Image"></a>
 			<div class="hero-copy">
 				<h1>TrailMix</h1>
-				<p>Coming Soon</p>	
+				<p>Coming Soon</p>
 			</div>
 		</div>
 	</div>
