--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,12 +13,12 @@
       <li><h3>Follow Us</h3></li>
       <li><a href="http://www.facebook.com/TrailMix.ie">Facebook</a></li>
       <li><a href="http://twitter.com/TrailMix_ie">Twitter</a></li>
-      <li><a href="javascript:void(0)">YouTube</a></li>
+      <!-- <li><a href="javascript:void(0)">YouTube</a></li> -->
     </ul>
     <ul>
       <li><h3>Legal</h3></li>
-      <li><a href="javascript:void(0)">Terms and Conditions</a></li>
-      <li><a href="javascript:void(0)">Privacy Policy</a></li>
+      <!-- <li><a href="javascript:void(0)">Terms and Conditions</a></li> -->
+      <!-- <li><a href="javascript:void(0)">Privacy Policy</a></li> -->
     </ul>
   </div>
 
