put a texture on the footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer" role="contentinfo">
+<footer id='footer' class="footer" role="contentinfo">
   <div class="footer-logo">
     <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_logo_1.png" alt="Logo image">
   </div>
@@ -6,7 +6,7 @@
     <ul>
       <li><h3>Content</h3></li>
       <!-- <li><a href="javascript:void(0)">About</a></li> -->
-      <li><a href="javascript:void(0)">Contact</a></li>
+      <li><a href="#">Contact</a></li>
       <!-- <li><a href="javascript:void(0)">Products</a></li> -->
     </ul>
     <ul>
