--- a/assets/css/sections/_footer.scss
+++ b/assets/css/sections/_footer.scss
@@ -1,3 +1,4 @@
+
 .footer {
   $base-spacing: 1.5em !default;
   $action-color: #477DCA !default;
@@ -7,8 +8,9 @@
   $footer-color: white;
   $footer-link-color: transparentize($footer-color, 0.6);
   $footer-disclaimer-color: transparentize($footer-color, 0.6);
-  
-  background: $dark-gray;
+  @include texture(180deg, $footer-background, $dark-gray, 42, 1);
+
+  // background: $dark-gray;
   // background: $footer-background;
   padding: ($base-spacing * 2) $gutter;
   width: 100%;
@@ -82,4 +84,5 @@
     max-width: 35em;
     text-align: center;
   }
+
 }
