--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,9 +4,10 @@
   </div>
   <div class="footer-links">
     <ul>
-      <li><h3>Content</h3></li>
+      <li><h3>Contact</h3></li>
       <!-- <li><a href="javascript:void(0)">About</a></li> -->
-      <li><a href="#">Contact</a></li>
+      <li><a href="mailto:rachel@trailmix.ie" target="_top">Email<br>rachel@trailmix.ie</a></li>
+      <!-- <li><a href="#">Contact</a></li> -->
       <!-- <li><a href="javascript:void(0)">Products</a></li> -->
     </ul>
     <ul>
