--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -2,7 +2,7 @@
 <div id='hero'>
 	<div class="ribbon-box">
 		<div class="ribbon-wrapper">
-			<div class="ribbon"><a href="https://www.surveymonkey.com/s/HMF2VCT">Quick Survey</a></div>
+			<div class="ribbon"><a href="https://www.surveymonkey.com/s/HMF2VCT">Market Research Survey</a></div>
 		</div>
 	</div>
 	<div class="hero">
