--- a/_layouts/comingsoon.html
+++ b/_layouts/comingsoon.html
@@ -6,6 +6,7 @@
     <link href="http://fonts.googleapis.com/css?family=Josefin+Sans:600,700|Damion" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
     <meta name="viewport" content="width=device-width, initial-scale = 1.0, user-scalable = no">
+    {% include analytics.html %}
   </head>
   <body>
 
